--- a/public/assets/css/steller.css
+++ b/public/assets/css/steller.css
@@ -11655,3 +11655,52 @@ pre {
 .section.bg-gray {
   background: white;
 }
+
+#cookiePopup {
+  background-color: #ffffff;
+  position: absolute;
+  font-size: 1rem;
+  width: 70vw;
+  max-width: 32.85em;
+  box-shadow: 0 0 2em rgba(5, 0, 31, 0.15);
+  text-align: justify;
+  line-height: 1.5em;
+  padding: 2em 1.4em;
+  border-radius: 6px;
+  transition: all 0.5s ease-in;
+}
+#cookiePopup img {
+  display: block;
+  width: 3.75em;
+  transform: translateZ(0);
+  position: relative;
+  margin: auto;
+}
+#cookiePopup p {
+  text-align: center;
+  margin: 1.4em 0;
+}
+#cookiePopup button {
+  background-color: #6859fe;
+  border: none;
+  color: #ffffff;
+  font-size: 1.2em;
+  padding: 1em 1.4em;
+  display: block;
+  position: relative;
+  margin: auto;
+  border-radius: 5px;
+}
+#cookiePopup a {
+  color: #6859fe;
+}
+.hide {
+  visibility: hidden;
+  bottom: 0;
+  right: 2em;
+}
+.show {
+  visibility: visible;
+  bottom: 2em;
+  right: 2em;
+}
